@@ -2,7 +2,7 @@ import sys
 
 import numpy
 
-from shapely.geos import geos_version_string
+from shapely import geos_version_string
 
 # Show some diagnostic information; handy for CI
 print("Python version: " + sys.version.replace("\n", " "))
