@@ -8,10 +8,10 @@ any dimension which is not present in every coordinate.
 
 import pytest
 
+import shapely
 from shapely import wkt
 from shapely.errors import GEOSException
 from shapely.geometry import LineString, Polygon, shape
-from shapely.geos import geos_version
 
 geojson_cases = [
     {"type": "LineString", "coordinates": [[1, 1, 1], [2, 2]]},
@@ -208,7 +208,7 @@ def test_create_directly(constructor, args):
 
 @pytest.mark.parametrize("wkt_geom,expected", wkt_cases)
 def test_create_from_wkt(wkt_geom, expected):
-    if geos_version >= (3, 12, 0):
+    if shapely.geos_version >= (3, 12, 0):
         # https://github.com/shapely/shapely/issues/1541
         with pytest.raises(GEOSException):
             wkt.loads(wkt_geom)
